--- a/reshop/package.json
+++ b/reshop/package.json
@@ -14,7 +14,18 @@
     "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.1",
+    "react-bootstrap": "^2.4.0",
+    "react-elastic-carousel": "^0.11.5",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.5",
+    "sass": "^1.52.3",
+    "styled-components": "^5.3.5",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
